Fixed `z-index` in `j-MainProgress`.

--- a/j-MainProgress/component.css
+++ b/j-MainProgress/component.css
@@ -1,2 +1,2 @@
-.ui-mainprogress { position: fixed; left: 0; top: 0; height: 2px; z-index: 1000; background-color: var(--color); box-shadow: 0 2px 10px rgba(66,130,244,0.8); }
+.ui-mainprogress { position: fixed; left: 0; top: 0; height: 2px; z-index: 1001; background-color: var(--color); box-shadow: 0 2px 10px rgba(66,130,244,0.8); }
 .ui-mainprogress-bottom { bottom: 0; top: unset; box-shadow: 0 -2px 10px rgba(66,130,244,0.8); }
